feat: Web Dashboard — FastAPI 後端 + React 前端 + 安全強化 + E2E 測試
新增 Web Dashboard 提供圖形化監控介面：
- FastAPI 後端：REST API + WebSocket 即時進度串流 + SQLite run history
- React 19 前端：Vite 6 + TypeScript + Tailwind CSS v4 + Recharts 圖表
- 三個頁面：Home（監控啟動）、History（歷史列表+分頁）、RunDetail（報告+圖表）
- 安全性：CORS 硬化、XSS 防護（rehype-sanitize）、prompt injection 防禦、UUID 驗證
- Playwright E2E 測試 32 個（navigation, keyword-input, history）全部通過
- Dead code cleanup：移除未使用 imports/interfaces、修正 status badge bug
- 文檔同步：CLAUDE.md + README.md 更新至最新狀態

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@ __pycache__/
 
 # Node / OpenClaw
 node_modules/
+web/frontend/dist/
+
+# Playwright
+web/frontend/playwright-report/
+web/frontend/test-results/
+web/frontend/blob-report/
 
 # OS
 .DS_Store
