--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ requests==2.32.3
 python-dotenv==1.2.1
 pytest==8.3.4
 pytest-cov==6.0.0
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+websockets==13.1
+pyyaml==6.0.2
